--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Girls -- Juvenile fiction'
 - !lcsh 'Animals -- Juvenile fiction'
 - !lcsh 'Africa -- Juvenile fiction'
+- GITenberg
 title: Baby Jane's Mission
 url: http://www.gutenberg.org/ebooks/36574
